[CM2-1685] Fixed double scrollbar in legacy discovery (#1039)
* [CM2-1685] Fixed double scrollbar in legacy discovery

* [CM2-1685] Adds break word to make the collapsible better

* CM2-1685 Switched from grid to flex layout positioning on Legacy Discovery

* [CM2-1685] Fix build

--- a/energylink-connect2-app/src/components/Collapsible/Collapsible.scss
+++ b/energylink-connect2-app/src/components/Collapsible/Collapsible.scss
@@ -59,3 +59,6 @@
     margin-top: 10px;
   }
 }
+.break-word {
+  word-break: break-all;
+}
